--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
 }
