--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
 
     implementation 'androidx.activity:activity-ktx:1.5.0'
+
+    implementation "com.chargemap.compose:numberpicker:1.0.3"
 }
